ajout dylan lejeune new

--- a/dle.html
+++ b/dle.html
@@ -1,1 +1,22 @@
-test
+<!DOCTYPE>
+<html>
+<head>
+  <title>TEST</title>
+</head>
+<body>
+  <div class="logo-p">
+    <iframe src="https://giphy.com/embed/28GHfhGFWpFgsQB4wR" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><a href="https://giphy.com/gifs/foxhomeent-hello-friday-mrs-doubtfire-28GHfhGFWpFgsQB4wR"></a>
+  </div>
+  <div class="Login">
+    <div class="box-connect">
+    <span class="logo">TEST</span>
+    <h1>Connexion</h1>
+    <form method="POST" action="">
+      <input id="inputname" value="name"  type="name" name="login" placeholder="Identifiant"/><br>
+      <input id="inputmotdepasse" type="password" name="pass" placeholder="Mot De Passe"/><br>
+      <input type="submit" name="valide" value="Valider"/>
+    </form>
+    </div>
+  </div>
+</body>
+</html>
