adding content index

--- a/TOL.html
+++ b/TOL.html
@@ -4,6 +4,6 @@
 	<title>TOL</title>
 </head>
 <body>
-<img src="https://media.giphy.com/media/111ebonMs90YLu/200.gif" alt="Thumb up"  width="720" height="540 >
+<img src="https://media.giphy.com/media/111ebonMs90YLu/200.gif" alt="Thumb up"  width="720" height="540">
 </body>
 </html>
