--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 	<title>repertoire</title>
 </head>
 <body>
-	<a href=""> </br></a>
-	<a href=""> </br></a>
-	<a href=""> </br></a>
-	<a href=""> </br></a>
-	<a href=""> </br></a>
-	<a href=""> </br></a>
-	<a href=""> </br></a>
-	<a href=""> </br></a>
-	<a href=""> </br></a>
-	<a href=""> </br></a>
+	<a href="ara.html">ARA</br></a>
+	<a href="CDE.html">CDE</br></a>
+	<a href="dle.html">DLE</br></a>
+	<a href="err.html">ERR</br></a>
+	<a href="kevin.html">KDB</br></a>
+	<a href="sle.html">SLE</br></a>
+	<a href="TOL.html">TOL</br></a>
+	<a href="yoann.html">YCL</br></a>
 </body>
 </html>
