Ajout du fichier kevin.html

--- a/kevin.html
+++ b/kevin.html
@@ -672,12 +672,17 @@ p {
 
 
 <div id=container>
-	  <div id=flip>
-	    <div><div>CONNERIE</div></div>
-	    <div><div>CONNERIE</div></div>
-	    <div><div>CONNERIE</div></div>
-	  </div>
-	</div>
+  <div id=flip>
+	<div><div>CONNERIE</div></div>
+	<div><div>CONNERIE</div></div>
+	<div><div>CONNERIE</div></div>
+  </div>
+</div>
+
+<br><br><br>
+
+<center><a href="index.html">Retour à l'accueil</a></center>
+
 </body>
 
 </html>
